--- a/JobSeekingSystem/src/JobSeekerUpdateGUI.form
+++ b/JobSeekingSystem/src/JobSeekerUpdateGUI.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="2c83c" binding="updateSkillsPanel" layout-manager="GridLayoutManager" row-count="13" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="2c83c" binding="updateSkillsPanel" layout-manager="GridLayoutManager" row-count="13" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="50" bottom="0" right="50"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
@@ -27,7 +27,7 @@
           </component>
           <component id="584ac" class="javax.swing.JLabel">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="-1" height="10"/>
               </grid>
             </constraints>
@@ -68,7 +68,7 @@
           </component>
           <component id="68869" class="javax.swing.JLabel">
             <constraints>
-              <grid row="7" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="20"/>
                 <preferred-size width="-1" height="20"/>
                 <maximum-size width="-1" height="20"/>
@@ -81,7 +81,7 @@
           </component>
           <component id="cef9f" class="javax.swing.JLabel">
             <constraints>
-              <grid row="8" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Your skills"/>
@@ -89,7 +89,7 @@
           </component>
           <vspacer id="8e48e">
             <constraints>
-              <grid row="6" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+              <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="15"/>
                 <preferred-size width="222" height="15"/>
                 <maximum-size width="-1" height="15"/>
@@ -98,7 +98,7 @@
           </vspacer>
           <vspacer id="d6859">
             <constraints>
-              <grid row="1" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="15"/>
                 <preferred-size width="222" height="15"/>
                 <maximum-size width="-1" height="15"/>
@@ -107,7 +107,7 @@
           </vspacer>
           <component id="84887" class="javax.swing.JTextField" binding="textField1" default-binding="true">
             <constraints>
-              <grid row="3" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <maximum-size width="300" height="-1"/>
               </grid>
             </constraints>
@@ -115,7 +115,7 @@
           </component>
           <component id="a9ae6" class="javax.swing.JTextField" binding="textField2" default-binding="true">
             <constraints>
-              <grid row="4" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <maximum-size width="300" height="-1"/>
               </grid>
             </constraints>
@@ -123,23 +123,15 @@
           </component>
           <component id="27e5e" class="javax.swing.JTextField" binding="textField3" default-binding="true">
             <constraints>
-              <grid row="5" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <maximum-size width="300" height="-1"/>
               </grid>
             </constraints>
             <properties/>
           </component>
-          <component id="fcd1e" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="8" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Available skills"/>
-            </properties>
-          </component>
           <component id="1e539" class="javax.swing.JButton" binding="addSkillButton">
             <constraints>
-              <grid row="9" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="&lt;"/>
@@ -147,7 +139,7 @@
           </component>
           <component id="6a259" class="javax.swing.JButton" binding="removeSkillButton">
             <constraints>
-              <grid row="10" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="&gt;"/>
@@ -160,19 +152,22 @@
               </grid>
             </constraints>
             <properties>
+              <background color="-16745473"/>
+              <font size="12" style="1"/>
+              <foreground color="-1"/>
               <text value="Update"/>
             </properties>
           </component>
           <vspacer id="a1839">
             <constraints>
-              <grid row="11" column="0" row-span="1" col-span="6" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+              <grid row="11" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="10"/>
               </grid>
             </constraints>
           </vspacer>
           <scrollpane id="a24dc">
             <constraints>
-              <grid row="9" column="4" row-span="2" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="9" column="3" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <maximum-size width="-1" height="300"/>
               </grid>
             </constraints>
@@ -202,6 +197,14 @@
               </component>
             </children>
           </scrollpane>
+          <component id="fcd1e" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="8" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Available skills"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
