--- a/JobSeekingSystem/src/JobSeekerHomeGUI.form
+++ b/JobSeekingSystem/src/JobSeekerHomeGUI.form
@@ -305,7 +305,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="6f6f4" class="javax.swing.JCheckBox" default-binding="true">
+              <component id="6f6f4" class="javax.swing.JCheckBox" binding="partTimeCheckBox">
                 <constraints>
                   <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
