--- a/JobSeekingSystem/src/JobSeekerUpdateGUI.form
+++ b/JobSeekingSystem/src/JobSeekerUpdateGUI.form
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JobSeekerUpdateGUI">
   <grid id="27dc6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="50" left="200" bottom="200" right="200"/>
     <constraints>
-      <xy x="42" y="20" width="1286" height="443"/>
+      <xy x="42" y="20" width="1286" height="748"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1118482"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="2c83c" binding="updateSkillsPanel" layout-manager="GridLayoutManager" row-count="13" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="10" left="50" bottom="0" right="50"/>
+        <margin top="50" left="50" bottom="50" right="50"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="3fd35" class="javax.swing.JLabel" binding="clientName">
@@ -96,18 +100,9 @@
               </grid>
             </constraints>
           </vspacer>
-          <vspacer id="d6859">
-            <constraints>
-              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="15"/>
-                <preferred-size width="222" height="15"/>
-                <maximum-size width="-1" height="15"/>
-              </grid>
-            </constraints>
-          </vspacer>
           <component id="84887" class="javax.swing.JTextField" binding="textField1" default-binding="true">
             <constraints>
-              <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <maximum-size width="300" height="-1"/>
               </grid>
             </constraints>
@@ -115,7 +110,7 @@
           </component>
           <component id="a9ae6" class="javax.swing.JTextField" binding="textField2" default-binding="true">
             <constraints>
-              <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <maximum-size width="300" height="-1"/>
               </grid>
             </constraints>
@@ -123,7 +118,7 @@
           </component>
           <component id="27e5e" class="javax.swing.JTextField" binding="textField3" default-binding="true">
             <constraints>
-              <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <maximum-size width="300" height="-1"/>
               </grid>
             </constraints>
@@ -134,6 +129,9 @@
               <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1118482"/>
+              <font size="16" style="1"/>
+              <foreground color="-16745473"/>
               <text value="&lt;"/>
             </properties>
           </component>
@@ -142,6 +140,9 @@
               <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1118482"/>
+              <font size="16" style="1"/>
+              <foreground color="-16745473"/>
               <text value="&gt;"/>
             </properties>
           </component>
@@ -205,6 +206,14 @@
               <text value="Available skills"/>
             </properties>
           </component>
+          <hspacer id="cd847">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="10"/>
+                <maximum-size width="500" height="-1"/>
+              </grid>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
     </children>
