--- a/JobSeekingSystem/src/LoginGUI.form
+++ b/JobSeekingSystem/src/LoginGUI.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="27dc6" layout-manager="GridLayoutManager" row-count="12" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="27dc6" layout-manager="GridLayoutManager" row-count="12" column-count="1" same-size-horizontally="true" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="50" left="50" bottom="50" right="50"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -32,14 +32,6 @@
               <text value=""/>
             </properties>
           </component>
-          <hspacer id="7b10e">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="50"/>
-                <maximum-size width="500" height="-1"/>
-              </grid>
-            </constraints>
-          </hspacer>
           <component id="82fa5" class="javax.swing.JPasswordField" binding="welcomeToJSSPasswordField">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -135,6 +127,14 @@
               <text value="Don't have an account? Register below:"/>
             </properties>
           </component>
+          <hspacer id="7b10e">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="50"/>
+                <maximum-size width="500" height="-1"/>
+              </grid>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
     </children>
